--- a/lesson2/web_code/index.html
+++ b/lesson2/web_code/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 <body>
     <form method="post" action="do_login.php">
         用户名:<input type="text" name="uname"><br>
